Add siren shop.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,12 @@
 {
 	"deno.enable": false,
 	"cSpell.words": [
-		"Kunai",
+		"battlecruiser",
+		"kansen",
+		"kunai",
 		"meowfficer",
-		"MEOWFFICERS"
+		"MEOWFFICERS",
+		"sakura",
+		"sardegna"
 	]
 }
