--- a/deno.json
+++ b/deno.json
@@ -8,6 +8,7 @@
 		"build_components_types": "tsc -p src/components/tsconfig.types.json --emitDeclarationOnly",
 		"build": "deno task build_main & deno task build_meowfficer & deno task build_augment_modules & deno task build_components_types & deno task build_fleet & deno task build_components",
 		"kansen": "deno run --allow-read --allow-write --allow-net ./scripts/kansen_list.ts",
+		"equip": "deno run --allow-read --allow-write --allow-net ./scripts/equip_list.ts",
 		"install_server": "deno install --allow-net --allow-read https://deno.land/std@0.65.0/http/file_server.ts",
 		"server": "file_server docs"
 	},
