--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,299 @@
 {
 	"deno.enable": false,
 	"cSpell.words": [
+		"abelheim",
+		"abercrombie",
+		"abukuma",
+		"acasta",
+		"adalbert",
+		"agano",
+		"akagi",
+		"akagichan",
+		"akane",
+		"akashi",
+		"akatsuki",
+		"akizuki",
+		"algerie",
+		"amagi",
+		"amagichan",
+		"amami",
+		"aoba",
+		"arashio",
+		"ariake",
+		"asashio",
+		"ashigara",
+		"asukagawa",
+		"atago",
+		"aulick",
+		"ausburne",
+		"avrora",
+		"ayame",
+		"ayanami",
+		"aylwin",
+		"azuma",
+		"azusa",
+		"bache",
 		"battlecruiser",
+		"bearn",
+		"belorussiya",
+		"bertin",
+		"bluecher",
+		"bogue",
+		"breze",
+		"bruenhilde",
+		"bulin",
+		"cassin",
+		"cesare",
+		"chao",
+		"chapayev",
+		"chihaya",
+		"chikuma",
+		"chise",
+		"chitose",
+		"chiyoda",
+		"choukai",
+		"chun",
+		"clevelad",
+		"collabo",
+		"curacoa",
+		"darc",
+		"decyrus",
+		"degli",
+		"downes",
+		"duca",
+		"dunkerque",
+		"elbing",
+		"eldridge",
+		"emanuele",
+		"eugen",
+		"ffnf",
+		"foote",
+		"forbin",
+		"fubuki",
+		"fumiruiru",
+		"fumizuki",
+		"furutaka",
+		"fusou",
+		"futami",
+		"galissonniere",
+		"gangut",
+		"gascogne",
+		"gioberti",
+		"giulio",
+		"glaus",
+		"gneisenau",
+		"gremyashchy",
+		"gridley",
+		"gromky",
+		"grosse",
+		"haguro",
+		"hakuryuu",
+		"hamakaze",
+		"hammann",
+		"hanazuki",
+		"haruka",
+		"haruna",
+		"harutsuki",
+		"hass",
+		"hatakaze",
+		"hatsuharu",
+		"hatsushimo",
+		"hazelwood",
+		"hermione",
+		"hibiki",
+		"hiei",
+		"hieichan",
+		"hiryuu",
+		"hiyou",
+		"hololive",
+		"honoka",
+		"houshou",
+		"hutten",
+		"hyuuga",
+		"ibuki",
+		"ikazuchi",
+		"impero",
+		"inazuma",
+		"ingraham",
+		"iori",
+		"isokaze",
+		"izumo",
+		"jintsuu",
+		"junyou",
+		"kaga",
+		"kagerou",
+		"kako",
+		"kala",
+		"kalk",
 		"kansen",
+		"kashino",
+		"kasumi",
+		"katsuragi",
+		"kawakaze",
+		"kazagumo",
+		"kinu",
+		"kinugasa",
+		"kirishima",
+		"kisaragi",
+		"kitakaze",
+		"kiyonami",
+		"kizuna",
+		"kizunaai",
+		"klaudia",
+		"koeln",
+		"koenigsberg",
+		"kongou",
+		"kronshtadt",
+		"kumano",
 		"kunai",
+		"kuon",
+		"laffey",
+		"lindomptable",
+		"littorio",
+		"lopiniatre",
+		"luetzow",
+		"maestrale",
+		"magno",
+		"maille",
+		"makinami",
+		"malin",
+		"mami",
+		"marblehead",
+		"matsukaze",
+		"matsuri",
 		"meowfficer",
 		"MEOWFFICERS",
+		"merkuria",
+		"messerschmitt",
+		"michishio",
+		"mikasa",
+		"mikazuki",
+		"mikuma",
+		"minami",
+		"minase",
+		"minato",
+		"minazuki",
+		"misaki",
+		"miura",
+		"miyuki",
+		"mogami",
+		"mujina",
+		"mullany",
+		"musashi",
+		"mutsu",
+		"mutsuki",
+		"myoukou",
+		"nachi",
+		"naganami",
+		"nagara",
+		"nagato",
+		"nagatsuki",
+		"nagisa",
+		"naka",
+		"nakiri",
+		"namiko",
+		"natsuiro",
+		"nekone",
+		"neptunia",
+		"nicoloso",
+		"niizuki",
+		"ning",
+		"noshiro",
+		"nowaki",
+		"nuernberg",
+		"nyotengu",
+		"oite",
+		"ookami",
+		"ooshio",
+		"oriani",
+		"oyashio",
+		"pamiat",
+		"parseval",
+		"pessagno",
+		"pompeo",
+		"pran",
+		"radford",
+		"recco",
+		"reisalin",
+		"rikka",
+		"ritsuko",
+		"roon",
+		"rupprecht",
+		"rurutie",
+		"ryuuhou",
+		"ryuujou",
+		"sakawa",
 		"sakura",
-		"sardegna"
+		"saraana",
+		"sardegna",
+		"scharnhorst",
+		"serri",
+		"seydlitz",
+		"shangri",
+		"shigure",
+		"shimakaze",
+		"shinano",
+		"shinjo",
+		"shion",
+		"shirakami",
+		"shiranui",
+		"shiratsuyu",
+		"shirayuki",
+		"shouhou",
+		"shoukaku",
+		"smalley",
+		"soobrazitelny",
+		"souryuu",
+		"sovetskaya",
+		"spee",
+		"stanly",
+		"strasser",
+		"stremitelny",
+		"surcouf",
+		"suruga",
+		"suzutsuki",
+		"suzuya",
+		"swei",
+		"swiftsure",
+		"taihou",
+		"takarada",
+		"tanikaze",
+		"temeraire",
+		"tempesta",
+		"theidolmaster",
+		"thueringen",
+		"tien",
+		"tokino",
+		"tosa",
+		"triomphant",
+		"ulrich",
+		"umikaze",
+		"urakaze",
+		"uranami",
+		"uruuru",
+		"utawarerumono",
+		"uzuki",
+		"valentz",
+		"vauquelin",
+		"veneto",
+		"venusvacation",
+		"vincenzo",
+		"vittorio",
+		"wakaba",
+		"wakatsuki",
+		"warspite",
+		"yamakaze",
+		"yamashiro",
+		"ying",
+		"yoizuki",
+		"yorck",
+		"yukikaze",
+		"yume",
+		"yura",
+		"yuubari",
+		"yuudachi",
+		"yuugure",
+		"zeppy",
+		"zuikaku"
 	]
 }
