--- a/deno.json
+++ b/deno.json
@@ -14,7 +14,7 @@
 	},
 	"lint": {
 		"files": {
-			"include": ["./src", "./scripts"]
+			"include": ["./src", "./scripts", "./tools"]
 		},
 		"rules": {
 		  "tags": ["recommended"],
@@ -24,7 +24,7 @@
 	},
 	"fmt": {
 		"files": {
-			"include": ["./src", "./scripts"]
+			"include": ["./src", "./scripts", "./tools"]
 		},
 		"options": {
 			"useTabs": true,
