--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,6 +81,7 @@
 		"gioberti",
 		"giulio",
 		"glaus",
+		"gloster",
 		"gneisenau",
 		"gremyashchy",
 		"gridley",
@@ -190,6 +191,7 @@
 		"nagatsuki",
 		"nagisa",
 		"naka",
+		"nakajima",
 		"nakiri",
 		"namiko",
 		"natsuiro",
@@ -227,6 +229,7 @@
 		"saraana",
 		"sardegna",
 		"scharnhorst",
+		"seafire",
 		"serri",
 		"seydlitz",
 		"shangri",
@@ -249,6 +252,7 @@
 		"stanly",
 		"strasser",
 		"stremitelny",
+		"supermarine",
 		"surcouf",
 		"suruga",
 		"suzutsuki",
