--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -133,6 +133,7 @@
 		"kasumi",
 		"katsuragi",
 		"kawakaze",
+		"kawanishi",
 		"kazagumo",
 		"kinu",
 		"kinugasa",
@@ -150,6 +151,7 @@
 		"kumano",
 		"kunai",
 		"kuon",
+		"kyoufuu",
 		"laffey",
 		"lindomptable",
 		"littorio",
@@ -232,6 +234,7 @@
 		"sardegna",
 		"scharnhorst",
 		"seafire",
+		"seiran",
 		"serri",
 		"seydlitz",
 		"shangri",
@@ -254,6 +257,7 @@
 		"stanly",
 		"strasser",
 		"stremitelny",
+		"suisei",
 		"supermarine",
 		"surcouf",
 		"suruga",
@@ -300,6 +304,7 @@
 		"yuudachi",
 		"yuugure",
 		"zeppy",
-		"zuikaku"
+		"zuikaku",
+		"zuiun"
 	]
 }
