--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
 		"amagichan",
 		"amami",
 		"aoba",
+		"arado",
 		"arashio",
 		"ariake",
 		"asashio",
@@ -40,6 +41,7 @@
 		"bertin",
 		"bluecher",
 		"bogue",
+		"braeguet",
 		"breze",
 		"bruenhilde",
 		"bulin",
@@ -69,6 +71,7 @@
 		"eugen",
 		"fairey",
 		"ffnf",
+		"fieseler",
 		"foote",
 		"forbin",
 		"fubuki",
@@ -153,6 +156,7 @@
 		"kuon",
 		"kyoufuu",
 		"laffey",
+		"levasseur",
 		"lindomptable",
 		"littorio",
 		"lopiniatre",
@@ -228,6 +232,8 @@
 		"rurutie",
 		"ryuuhou",
 		"ryuujou",
+		"ryuusei",
+		"saiun",
 		"sakawa",
 		"sakura",
 		"saraana",
@@ -270,6 +276,7 @@
 		"tanikaze",
 		"temeraire",
 		"tempesta",
+		"tenzan",
 		"theidolmaster",
 		"thueringen",
 		"tien",
@@ -292,6 +299,7 @@
 		"wakaba",
 		"wakatsuki",
 		"warspite",
+		"westland",
 		"yamakaze",
 		"yamashiro",
 		"ying",
