--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -202,9 +202,11 @@
 		"nakajima",
 		"nakiri",
 		"namiko",
+		"nanoceramic",
 		"natsuiro",
 		"nekone",
 		"neptunia",
+		"neuroplastic",
 		"nicoloso",
 		"niizuki",
 		"ning",
@@ -264,6 +266,7 @@
 		"strasser",
 		"stremitelny",
 		"suisei",
+		"supercavitation",
 		"supermarine",
 		"surcouf",
 		"suruga",
@@ -274,6 +277,8 @@
 		"taihou",
 		"takarada",
 		"tanikaze",
+		"Tbts",
+		"tbtsk",
 		"temeraire",
 		"tempesta",
 		"tenzan",
@@ -282,6 +287,7 @@
 		"tien",
 		"tokino",
 		"tosa",
+		"tracto",
 		"triomphant",
 		"ulrich",
 		"umikaze",
