--- a/deno.json
+++ b/deno.json
@@ -1,4 +1,5 @@
 {
+	"lock": false,
 	"tasks": {
 		"build_main": "tsc -p ./src/main",
 		"build_meowfficer": "tsc -p ./src/meowfficer",
@@ -32,5 +33,8 @@
 			"lineWidth": 160,
 			"singleQuote": true
 		}
+	},
+	"imports": {
+		"$std/": "https://deno.land/std@0.198.0/"
 	}
 }
