--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
 		"ashigara",
 		"asukagawa",
 		"atago",
+		"attilio",
 		"aulick",
 		"ausburne",
 		"avrora",
@@ -62,6 +63,7 @@
 		"darc",
 		"decyrus",
 		"degli",
+		"doria",
 		"downes",
 		"duca",
 		"dunkerque",
@@ -72,6 +74,7 @@
 		"fairey",
 		"ffnf",
 		"fieseler",
+		"flandre",
 		"foote",
 		"forbin",
 		"fubuki",
@@ -92,6 +95,7 @@
 		"gridley",
 		"gromky",
 		"grosse",
+		"guichen",
 		"haguro",
 		"hakuryuu",
 		"hamakaze",
@@ -109,6 +113,7 @@
 		"hibiki",
 		"hiei",
 		"hieichan",
+		"hime",
 		"hiryuu",
 		"hiyou",
 		"hololive",
@@ -138,6 +143,8 @@
 		"kawakaze",
 		"kawanishi",
 		"kazagumo",
+		"kearsarge",
+		"kersaint",
 		"kinu",
 		"kinugasa",
 		"kirishima",
@@ -219,6 +226,7 @@
 		"ooshio",
 		"oriani",
 		"oyashio",
+		"painleve",
 		"pamiat",
 		"parseval",
 		"pessagno",
@@ -226,6 +234,7 @@
 		"pran",
 		"radford",
 		"recco",
+		"regolo",
 		"reisalin",
 		"rikka",
 		"ritsuko",
@@ -248,6 +257,7 @@
 		"shangri",
 		"shigure",
 		"shimakaze",
+		"shimanto",
 		"shinano",
 		"shinjo",
 		"shion",
@@ -265,6 +275,7 @@
 		"stanly",
 		"strasser",
 		"stremitelny",
+		"suffren",
 		"suisei",
 		"supercavitation",
 		"supermarine",
@@ -276,6 +287,7 @@
 		"swiftsure",
 		"taihou",
 		"takarada",
+		"tamaki",
 		"tanikaze",
 		"Tbts",
 		"tbtsk",
