--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
 		"arado",
 		"arashio",
 		"ariake",
+		"asanagi",
 		"asashio",
 		"ashigara",
 		"asukagawa",
@@ -108,6 +109,7 @@
 		"hatakaze",
 		"hatsuharu",
 		"hatsushimo",
+		"hatsuzuki",
 		"hazelwood",
 		"hermione",
 		"hibiki",
@@ -225,6 +227,7 @@
 		"ookami",
 		"ooshio",
 		"oriani",
+		"owari",
 		"oyashio",
 		"painleve",
 		"pamiat",
@@ -303,6 +306,7 @@
 		"triomphant",
 		"ulrich",
 		"umikaze",
+		"unzen",
 		"urakaze",
 		"uranami",
 		"uruuru",
