--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
 		"asanagi",
 		"asashio",
 		"ashigara",
+		"asuka",
 		"asukagawa",
 		"atago",
 		"attilio",
@@ -119,11 +120,14 @@
 		"hiryuu",
 		"hiyou",
 		"hololive",
+		"homura",
 		"honoka",
 		"houshou",
 		"hutten",
+		"hwah",
 		"hyuuga",
 		"ibuki",
+		"ikaruga",
 		"ikazuchi",
 		"impero",
 		"inazuma",
@@ -131,10 +135,12 @@
 		"iori",
 		"isokaze",
 		"izumo",
+		"jacinto",
 		"jintsuu",
 		"junyou",
 		"kaga",
 		"kagerou",
+		"kagura",
 		"kako",
 		"kala",
 		"kalk",
@@ -212,6 +218,7 @@
 		"nakiri",
 		"namiko",
 		"nanoceramic",
+		"natori",
 		"natsuiro",
 		"nekone",
 		"neptunia",
@@ -255,6 +262,7 @@
 		"scharnhorst",
 		"seafire",
 		"seiran",
+		"senran",
 		"serri",
 		"seydlitz",
 		"shangri",
@@ -329,10 +337,12 @@
 		"yorck",
 		"yukikaze",
 		"yume",
+		"yumi",
 		"yura",
 		"yuubari",
 		"yuudachi",
 		"yuugure",
+		"yuyaki",
 		"zeppy",
 		"zuikaku",
 		"zuiun"
